fixed spacing in layout

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -558,8 +558,10 @@ button {
   gap: 20px;
   align-items: center;
   justify-content: center;
-  padding-inline: 2rem;
-  margin-inline: auto;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  margin-left: auto;
+  margin-right: auto;
   position: relative;
   transition: height 0.25 ease-in-out;
   overflow: hidden;
@@ -568,7 +570,8 @@ button {
 .lola-layout--container {
   width: 100%;
   max-width: 350px;
-  margin-inline: auto;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   flex-direction: column;
   gap: 20px;
